syntax = "proto3";

package zipkv;

message Location {
  sint32 backend_file = 1;
  sint32 offset = 2;
  sint32 size = 3;
  bytes metadata = 4;
}

message PutRecord {
  string filename = 1;
  Location location = 2;
}

message DeleteRecord {
  string filename = 1;
}

message HistoryRecord {
  oneof record {
    PutRecord put = 1;
    DeleteRecord delete = 2;
  }
}

message Db {
  sint32 next_backend_file = 2;
  repeated HistoryRecord history = 3;
}
